--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopapi",
+  "name": "shopifystore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.4",
+    "@shopify/shopify-api": "^7.0.0",
+    "framer-motion": "^10.12.4",
+    "next": "13.3.0",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "typescript": "^5.0.4"
   }
 }
